--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
           <div class="burger" id="burger">
             <div class="burger_items"></div>
           </div>
-          <a href="index.html" class="logo" data-scroll="#intro">E G C</a>
+          <a href="#" class="logo" data-scroll="#intro">E G C</a>
 
           <!-- /.NAV -->
           <nav class="nav" id="nav">
-            <a href="#" class="nav_links" data-scroll="#about_us">About us</a>
-            <a href="#" class="nav_links" data-scroll="#universe">Universe</a>
-            <a href="#" class="nav_links" data-scroll="#factions">Factions</a>
-            <a href="#" class="nav_links" data-scroll="#war_heroes">War heroes</a>
-            <a href="#" class="nav_links" data-scroll="#roadmap">Roadmap</a>
-            <a href="#" class="nav_links" data-scroll="#faq">FAQ</a>
+            <a href="#" class="nav_links" data-section="about_us" data-scroll="#about_us">About us</a>
+            <a href="#" class="nav_links" data-section="universe" data-scroll="#universe">Universe</a>
+            <a href="#" class="nav_links" data-section="factions" data-scroll="#factions">Factions</a>
+            <a href="#" class="nav_links" data-section="war_heroes" data-scroll="#war_heroes">War heroes</a>
+            <a href="#" class="nav_links" data-section="roadmap" data-scroll="#roadmap">Roadmap</a>
+            <a href="#" class="nav_links" data-section="faq" data-scroll="#faq">FAQ</a>
           </nav>
           <!-- /.NAV -->
         </div>
@@ -57,7 +57,7 @@
 
 
     <!-- /.ABOUT_US -->
-    <div class="section about_us" id="about_us">
+    <section class="section about_us" id="about_us" data-section="about_us">
       <div class="card_image" data-aos="fade-zoom-in" data-aos-delay="300">
         <img src="img/card_img/1.jpeg" alt="">
       </div>
@@ -71,14 +71,14 @@
       </div>
 
       <div></div>
-    </div>
+    </section>
     <!-- /.ABOUT_US -->
 
 
 
 
     <!-- /.UNIVERSE -->
-    <div class="section universe" id="universe">
+    <section class="section universe" id="universe" data-section="universe">
       <div class="universe_content" data-aos="fade-zoom-in" data-aos-delay="300">
         <h3 class="title">UNIVERSE</h3>
         <p class="subtitle">Through danger comes solidarity and through solidarity comes victory- They say</p>
@@ -88,14 +88,14 @@
         <p class="text">Only 7,777 of the bravest warriors survived.</p>
         <a href="#" class="link universe_link">BECOME A WARRIOR AND JOIN YOUR ARMY!</a>
       </div>
-    </div>
+    </section>
     <!-- /.UNIVERSE -->
 
 
 
 
     <!-- /.FACTIONS -->
-    <div class="section factions" id="factions">
+    <section class="section factions" id="factions" data-section="factions">
       <div class="factions_content">
         <div class="factions_items factions_items_icons" data-aos="fade-zoom-in" data-aos-delay="300">
           <div class="factions_icons_block active">
@@ -827,14 +827,14 @@
         </div>
 
       </div>
-    </div>
+    </section>
     <!-- /.FACTIONS -->
 
 
 
 
     <!-- /.WAR_HEROES -->
-    <div class="section war_heroes" id="war_heroes">
+    <section class="section war_heroes" id="war_heroes" data-section="war_heroes">
       <div class="war_heroes_content">
         <h3 class="title" data-aos="fade-zoom-in" data-aos-delay="300">WAR HEROES</h3>
         <p class="text" data-aos="fade-zoom-in" data-aos-delay="300">The War Heroes are 5 of the most feared and respected warriors. They are The Legends of each faction.</p>
@@ -846,14 +846,14 @@
       <div class="war_heroes_image" data-aos="fade-zoom-in" data-aos-delay="300">
         <img src="img/card_img/2.jpeg" alt="">
       </div>
-    </div>
+    </section>
     <!-- /.WAR_HEROES -->
 
 
 
 
     <!-- /.ROADMAP -->
-    <div class="section roadmap" id="roadmap">
+    <section class="section roadmap" id="roadmap" data-section="roadmap">
       <div class="roadmap_content" data-aos="fade-zoom-in" data-aos-delay="300">
         <div class="roadmap_head">
           <div class="roadmap_head_title active">ROADMAP<br>LAUNCH</div>
@@ -950,14 +950,14 @@
           <p class="text roadmap_text">For the first time, a community will have the opportunity to play in a videogame they shaped. Be the first to be part of this innovative experience.</p>
         </div>
       </div>
-    </div>
+    </section>
     <!-- /.ROADMAP -->
 
 
 
 
     <!-- /.FAQ -->
-    <div class="section faq" id="faq">
+    <section class="section faq" id="faq" data-section="faq">
       <div class="faq_content" data-aos="fade-zoom-in" data-aos-delay="300">
         <div class="faq_items">
           <div class="subtitle faq_head_title"><div class="faq_icon"></div>How do I become a SpaceWarrior?</div>
@@ -1014,7 +1014,7 @@
           <div class="text faq_body_text">Yes, there will be giveaways! You can check out our giveaway channel on <a class="faq_link" href="#">Discord.</a></div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- /.FAQ -->
 
 
